23-microservice-example-kubernetes/k8s/posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-service
            port:
              number: 8080
